<resources>
    <string name="app_name">Noctoorn</string>
    <string name="title_activity_add_service">AfegirServeiActivity</string>
    <string name="user_name">Pis 2018</string>
    <string name="user_total_points">Total Points:</string>
    <string name="user_weekly_points">Weekly Points:</string>
    <string name="user_daily_points">Daily Points:</string>
    <string name="user_monthly_points">Monthly Points:</string>
    <string name="user_zones">Favorite Areas:</string>
    <string name="service_list_title">All Services</string>
    <string name="title_activity_service_information">Font</string>
    <string name="menu_map">Map</string>
    <string name="menu_services">Services</string>
    <string name="menu_ranking">Ranking</string>
    <string name="menu_user_settings">User settings</string>
    <string name="menu_app_settings">App settings</string>
    <string name="menu_logOut">Log out</string>
    <string name="menu_info">About us</string>
    <string name="action_settings">Settings</string>
    <string name="action_login">Log in</string>
    <string name="action_logout">Log out</string>
    <string name="title_activity_settings">Settings</string>
    <string name="registerButton_name">Register</string>
    <string name="loginButton_name">Log in</string>
    <string name="ranking_text">Ranking</string>
    <string name="time_text">Time</string>
    <string name="addImage_text">Add image</string>
    <string name="notNow_text">Not now</string>
    <string name="search">Search here</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>

    <string name="category_label">Category:</string>
    <string name="radius_label">Radius:</string>
    <string name="sort_by_label">Sort by:</string>
    <string name="center_on_label">Center on:</string>
    <string name="service_list_settings_title">Service list preferences:</string>
    <string name="distance_label">Distance:</string>
    <string name="adress_label">Adress:</string>
    <string name="telf_label">Telephone:</string>
    <string name="go_label">GO!</string>
    <string name="view_on_map_label">View on map</string>
    <string name="comments_label">Comments:</string>
    <string name="media_label">Media:</string>
    <string name="title_activity_navigation_menu">NavigationMenuActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_aux_maps">Map</string>
    <string name="categories">Categories</string>
    <string name="dialog_selectAll">Select All</string>
    <string name="dialog_dismiss">Dismiss</string>
    <string name="dialog_ok">OK</string>
    <string name="already_account">Already have an account? Login</string>
    <string name="password">Password</string>
    <string name="e_mail">E-mail</string>
    <string name="account_signup">Don\'t have account? Sign Up</string>
    <string name="signUp">Sign Up</string>
    <string name="email_required">Email is required</string>
    <string name="password_required">Password is required</string>
    <string name="email_notvalid">Enter a valid email address</string>
    <string name="password_length">Not a valid password. Length 6 minimum</string>
    <string name="error_signUp">Some Error Occurred</string>
    <string name="success_SignUp">User Registered Successfully</string>
    <string name="error_emailused">Email Already Registered</string>
    <string name="login">LogIn</string>

    <string name="facebook_app_id">141582310022348</string>
    <string name="fb_login_protocol_scheme">fb141582310022348</string>
    <string name="username">Username</string>
    <string name="username_required">Username is required</string>
    <string name="dialog_discardAll">Discard All</string>
    <string name="verification_email">Verification email sent. Please check it out and then come back and log in.</string>
    <string name="verification_email2">Please check your email has been verified</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="reset_password">Reset Password</string>
    <string name="PasswordResetEmail">Password Reset Email Sent</string>
    <string name="aboutUs_text">We are a group of students from the University of Barcelona and this application is our project for the subject Projecte Integrat de Software</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="password_conf_required">Confirmation password is required</string>
    <string name="passwords_match">Passwords do not match</string>
    <string name="button">Button</string>
    <string name="select_image">Select Profile Image</string>
    <string name="image_source">image/*</string>
    <string name="user_deleted">User Deleted Correctly</string>
    <string name="current_position">Current Position</string>
    <string name="favourite_zone_1">Favourite Zone 1</string>
    <string name="favourite_zone_2">Favourite Zone 2</string>
    <string name="favourite_zone_5">Favourite Zone 5</string>
    <string name="favourite_zone_4">Favourite Zone 4</string>
    <string name="favourite_zone_3">Favourite Zone 3</string>
    <string name="type_of_service">Type of service:</string>
    <string name="image_changed">Image Changed Correctly</string>
    <string name="delete_empty">Enter some data next time</string>
    <string name="delete_login">LogIn to finally delete your account:</string>
    <string name="dialog_cancel">CANCEL</string>
    <string name="delete_account">Delete account</string>
    <string name="new_password">New Password</string>
    <string name="new_data">Enter your data</string>
    <string name="error_new_password">New Password Not Valid</string>
    <string name="password_changed">Password Changed Correctly</string>
    <string name="manage_fav_zones">Manage Favorite Zones</string>
    <string name="add_fav_zone">Add Favorite Zone</string>
    <string name="delete_zone">Delete FavZone</string>
    <string name="fav_full">You already have 5 favorite zones</string>
    <string name="fav_deleted">Favorite zone correctly removed</string>
    <string name="name">Name</string>
    <string name="centred_on">Services centred on:</string>
    <string name="dialog_rename_service_title">Rename service</string>
    <string name="dialog_rename_service_message">Type the new name of the service:</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="type_new_name_hint">New name</string>
    <string name="dialog_remove_service_message">Are you sure you want to remove this service? Once you do it, you can\'t go back.</string>
    <string name="dialog_remove_service_title">Caution!</string>
    <string name="remove">Remove</string>


</resources>
