<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:padding="16dp">

    <EditText
        android:id="@+id/delete_email"
        android:hint="@string/e_mail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/delete_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/delete_email"
        android:hint="@string/password"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/delete_pass_new"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/delete_password"
        android:layout_centerHorizontal="true"
        android:hint="@string/new_password"
        android:inputType="textPassword" />


</RelativeLayout>